usb-moded (0.55) unstable; urgency=low

  * Add android gadget driver support
  * Make udev default
  * Add rescue mode

 -- Philippe De Swert <philippedeswert@jollamobile.com> Wed, 12 Dec 2012 22:57:42 +0200

usb-moded (0.54) unstable; urgency=low

  * Instead of spawning shells with system() use libkmod
  * Make config file optional as defaults work for most
  * Add dbus method to set network configuration

 -- Philippe De Swert <philippedeswert@gmail.com> Tue. 13 Nov 2012 18:56:23 +0300

usb-moded (0.53) unstable; urgency=low
 
  * Un-nokia to make usb_moded more generic
  * Add mtp support for buteo
  * More generic network set-up and configuration
  * Fix bug with charging mode clean-up 
  * Compile for all versions of glib
  * Support g_mass_storage and g_file_storage so we are not kernel dependant.

 -- Philippe De Swert <philippedeswert@gmail.com>  Mon, 20 Aug 2012 15:58:27 +0300

usb-moded (0.52) unstable; urgency=low

  * Add upstart appsync functionality
  * Coverity fixes

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Thu, 01 Mar 2012 13:57:21 +0200

usb-moded (0.50) unstable; urgency=low

  * Make sure multiple types of devicelock can be used
  * Switch to g_ether by default for the time being

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Wed, 15 Feb 2012 17:42:51 +0200

usb-moded (0.49) unstable; urgency=low

  * small memory usage fixes
  * split out meego devlock 

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Fri, 13 Jan 2012 16:45:52 +0200

usb-moded (0.48) unstable; urgency=low

  * Switch to g_mass_storage for more recent kernels
  * Set network through convience functions
  * Go to undefined if no matching mode is found, so non-existing modes are not set silently

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Fri, 28 Oct 2011 12:21:22 +0300

usb-moded (0.47) unstable; urgency=low
  
  * Make it possible to use the ini file for the mode setting also. This removes
    the gconf dependency.
