@@ -3,6 +3,7 @@ usb-moded (0.55) unstable; urgency=low
   * Add android gadget driver support
   * Make udev default
   * Add rescue mode
+  * Add softconnect support
 
  -- Philippe De Swert <philippedeswert@jollamobile.com> Wed, 12 Dec 2012 22:57:42 +0200
 
